[package]
name = "pinocchio-amm"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
crate-type = ["cdylib", "lib"]

[[test]]
name = "integration"
path = "tests/main.rs"

[dependencies]
pinocchio = { version = "0.10.2", features = ["cpi"] }
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
pinocchio-associated-token-account = "0.3.0"

[dev-dependencies]
litesvm = "0.9"
solana-pubkey = { version = "3.0", features = ["curve25519"] }
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-signer = "3.0"
solana-account = "3.0"
solana-transaction = "3.0"
solana-message = "3.0"
solana-system-interface = "2.0"
solana-rent = "3.0"
solana-clock = "3.0"
solana-instruction-error = "2.0"
solana-transaction-error = "3.0"
spl-associated-token-account = "8.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
